--- a/GamesStore.Api/GamesStore.Api.csproj
+++ b/GamesStore.Api/GamesStore.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>daef070c-85ef-460e-a7c8-a628fc0bd88e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
